--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -1,29 +1,30 @@
-// VARIABLE CHANGES
+// 1) CUSTOMIZE VARIABLES
 
 $enable-gradients: true;
 $enable-shadows: true;
 
-// Customize some defaults
 $body-color: #333;
 $body-bg: #fff;
 $border-radius: .4rem;
 $success: #7952b3;
 
-// BOOTSTRAP IMPORTS
+// 2) BOOTSTRAP IMPORTS
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
-// CUSTOM STYLES
+// 3) ICON IMPORTS
 @import "icon-list";
 
-/* 
+// 4) FONT IMPORTS
 // this is how to import a font family that has been downloaded to the fonts folder
 // webpack has been configured to recognize font files so they can be imported via css
 // use them as normal after they have been imported
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat/Montserrat-VariableFont_wght.ttf');
-}
-*/
+// REMEMBER to use a fallback
+// @font-face {
+//   font-family: 'Montserrat' 'sans-serif';
+//   src: url('../fonts/Montserrat/Montserrat-VariableFont_wght.ttf');
+// }
+
+// 5) CUSTOM STYLES
 body {
   // font-family: Montserrat;
   padding: 3rem 1.5rem;
