--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -1,12 +1,7 @@
+/* Begin Custom Sass/Scss/css */
+
 // 1) CUSTOMIZE VARIABLES
-
-$enable-gradients: true;
-$enable-shadows: true;
-
-$body-color: #333;
-$body-bg: #fff;
-$border-radius: .4rem;
-$success: #7952b3;
+$body-color: hsl(0, 0%, 20%);
 
 // 2) BOOTSTRAP IMPORTS
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
@@ -15,30 +10,20 @@ $success: #7952b3;
 @import "icon-list";
 
 // 4) FONT IMPORTS
-// this is how to import a font family that has been downloaded to the fonts folder
-// webpack has been configured to recognize font files so they can be imported via css
-// use them as normal after they have been imported
-// REMEMBER to use a fallback
-// @font-face {
-//   font-family: 'Montserrat' 'sans-serif';
-//   src: url('../fonts/Montserrat/Montserrat-VariableFont_wght.ttf');
-// }
+@font-face {
+  font-family: 'Montserrat' 'sans-serif';
+  src: url('../fonts/Montserrat/Montserrat-VariableFont_wght.ttf');
+}
+// here is an alternate way of importing fonts
+// @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
 
 // 5) CUSTOM STYLES
 body {
-  // font-family: Montserrat;
+  font-family: Montserrat;
   padding: 3rem 1.5rem;
 }
 
 // Style Bootstrap icons
 .bi {
   fill: currentColor;
-}
-
-.classTest {
-
-
-        display: flex;
-
-
 }
