sass split up and readme.md

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,1 +1,16 @@
-@use "custom" as *;
+/* Begin Custom Sass/Scss/css */
+
+// 1) CUSTOMIZE VARIABLES
+@import "custom_variables";
+
+// 2) BOOTSTRAP IMPORTS
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
+// 4) FONT IMPORTS
+@import "fonts";
+
+// 3) ICON IMPORTS
+@import "icon-list";
+
+// 5) CUSTOM STYLES
+@import "custom_styles";
