removed Bootstrap as dependency, more sass work

--- a/src/sass/_custom_styles.scss
+++ b/src/sass/_custom_styles.scss
@@ -1,3 +1,9 @@
+// IMPORT CUSTOM MODULES
+@import "./mods/fonts";
+@import "./mods/icon-list";
+
+
+// WRITE CUSTOM STYLES
 body {
   font-family: Montserrat sans-serif;
   padding: 3rem 1.5rem;
