--- a/src/sass/_custom_styles.scss
+++ b/src/sass/_custom_styles.scss
@@ -1,6 +1,6 @@
 // IMPORT CUSTOM MODULES
-@import "./mods/fonts";
-@import "./mods/icon-list";
+@import "./modules/fonts";
+@import "./modules/icon-list";
 
 
 // WRITE CUSTOM STYLES
