add basic node server

--- a/src/sass/_custom_styles.scss
+++ b/src/sass/_custom_styles.scss
@@ -4,10 +4,10 @@
 
 
 // WRITE CUSTOM STYLES
-body {
-  font-family: Montserrat sans-serif;
-  padding: 3rem 1.5rem;
-}
+// body {
+//   font-family: Montserrat sans-serif;
+//   padding: 3rem 1.5rem;
+// }
 
 // Style Bootstrap icons
 .bi {
