webpack reconfig round 1

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,10 +1,10 @@
 /* Begin Custom Sass/Scss/css */
 
 // 1) CUSTOMIZE VARIABLES
-//@import "custom_variables";
+@import "custom_variables";
 
 // 2) BOOTSTRAP IMPORTS
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 // 3) CUSTOM STYLES
-//@import "custom_styles";
+@import "custom_styles";
