--- a/src/sass/_custom_styles.scss
+++ b/src/sass/_custom_styles.scss
@@ -1,12 +1,11 @@
 // IMPORT CUSTOM MODULES
-@import "./modules/fonts";
-@import "./modules/icon-list";
+@import "./modules/google_fonts";
 
 // WRITE CUSTOM STYLES
-// body {
-//   font-family: Montserrat sans-serif;
-//   padding: 3rem 1.5rem;
-// }
+body {
+  font-family: Montserrat sans-serif;
+  padding: 3rem 1.5rem;
+}
 
 // Style Bootstrap icons
 .bi {
